# yourai

./: .gitignore  .gitmodules  CLAUDE.md
.claude/: settings.json
.claude/agents/: ai-engine.md  architect.md  core-platform.md  data-pipeline.md  frontend.md  policy-engine.md
.claude/commands/: check-integration.md  review-architecture.md  start-wp.md
.claude/rules/: tenant-isolation.md
backend/: CLAUDE.md  GATE_REVIEW_WP6_PHASE2.md  WP6_COMPLETION.md  WP6_INTEGRATION_VERIFICATION.md  alembic.ini  create_admin_user.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_seed_permissions.py  003_add_policy_tables.py  004_seed_legislation_permission.py  005_add_lex_ingestion_jobs.py  006_add_lex_legislation_index.py
backend/src/yourai/: __init__.py
backend/src/yourai/agents/: confidence.py  conversations.py  enums.py  feedback.py  invocation.py  knowledge_schemas.py  messages.py  model_routing.py  models.py  orchestrator.py  personas.py  qa_agent.py  router.py  schemas.py  semantic_cache.py  skills.py  streaming.py  title_generation.py  verification.py
backend/src/yourai/agents/prompts/: __init__.py  base.py  router.py
backend/src/yourai/agents/workers/: __init__.py  caselaw.py  legislation.py  policy.py
backend/src/yourai/api/: main.py
backend/src/yourai/api/routes/: activity_logs.py  auth.py  conversations.py  documents.py  feedback.py  guardrails.py  health.py  knowledge_bases.py  legislation_admin.py  personas.py  policy_ontology.py  policy_reviews.py  profile.py  roles.py  search.py  sse.py  templates.py  tenants.py  users.py
backend/src/yourai/api/sse/: __init__.py  auth.py  channels.py  dependencies.py  enums.py  events.py  manager.py  publisher.py
backend/src/yourai/core/: activity_logs.py  auth.py  celery_app.py  config.py  database.py  enums.py  exceptions.py  guardrails.py  middleware.py  models.py  roles.py  schemas.py  tenant.py  users.py
backend/src/yourai/knowledge/: chunking.py  contextualiser.py  documents.py  embeddings.py  exceptions.py  extraction.py  knowledge_base.py  legislation_admin.py  lex_changes.py  lex_health.py  lex_mcp.py  lex_qdrant_status.py  lex_rest.py  lex_tasks.py  models.py  pipeline.py  reranker.py  schemas.py  search.py  storage.py  tasks.py  validation.py  vector_store.py
backend/src/yourai/policy/: __init__.py  enums.py  evaluator.py  models.py  ontology.py  pdf_export.py  review_engine.py  review_history.py  schemas.py  seed_data.py  type_identifier.py
backend/tests/: conftest.py
backend/tests/integration/: test_agent_e2e.py  test_auth_flow.py  test_citation_verification.py  test_document_pipeline.py  test_full_agent_flow.py  test_knowledge_workers.py  test_lex_integration.py  test_policy_api.py  test_policy_review_api.py  test_policy_review_engine.py  test_tenant_isolation.py  test_user_lifecycle.py
backend/tests/unit/: test_smoke.py
backend/tests/unit/agents/: test_conversation_service.py  test_verification.py
backend/tests/unit/api/routes/: test_legislation_admin.py
backend/tests/unit/api/sse/: test_channels.py  test_endpoints.py  test_events.py  test_publisher.py
backend/tests/unit/core/: test_auth.py  test_models.py  test_roles.py  test_users.py
backend/tests/unit/knowledge/: test_chunking.py  test_document_service.py  test_extraction.py  test_knowledge_base_service.py  test_legislation_admin.py  test_legislation_index.py  test_lex_changes.py  test_lex_health.py  test_lex_mcp.py  test_lex_qdrant_status.py  test_lex_rest.py  test_lex_tasks.py  test_models.py  test_search.py  test_validation.py
backend/tests/unit/policy/: test_ontology_service.py  test_review_state_machine.py  test_type_identifier.py
docs/: CLAUDE_CODE_OPERATORS_GUIDE.md  FUNCTIONAL_SPEC_V2.md
docs/architecture/: API_CONTRACTS.md  DATABASE_SCHEMA.sql  PROGRESS.md  TECH_DECISIONS.md
docs/work-packages/: WP7_OUTSTANDING_PLAN.md
frontend/: .gitignore  CLAUDE.md  README.md  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/src/app/: globals.css  (+2 more)
infrastructure/: docker-compose.lex.yml  docker-compose.yml
(+79 files in other folders)
