[project]
name = "yourai"
version = "0.1.0"
description = "White-label, multi-tenant AI compliance platform for regulated industries"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "anthropic>=0.42.0",
    "qdrant-client>=1.12.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "python-jose[cryptography]>=3.3.0",
    "mcp>=1.0.0",
    "uuid-utils>=0.9.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "tiktoken>=0.7.0",
    "voyageai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "fakeredis>=2.26.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yourai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["B008"]  # Depends() in FastAPI argument defaults is standard pattern

[tool.ruff.lint.per-file-ignores]
"src/yourai/core/models.py" = ["TCH003"]  # ORM columns need runtime types
"src/yourai/knowledge/models.py" = ["TCH003"]  # ORM columns need runtime types
"src/yourai/core/schemas.py" = ["TCH001", "TCH003", "UP046"]  # Pydantic needs runtime types
"src/yourai/knowledge/schemas.py" = ["TCH001", "TCH003", "UP046"]  # Pydantic needs runtime types
"src/yourai/knowledge/lex_rest.py" = ["TCH003"]  # Pydantic models need runtime types
"src/yourai/api/routes/*.py" = ["TCH001", "TCH002", "TCH003"]  # FastAPI needs runtime types for DI

[tool.ruff.lint.isort]
known-first-party = ["yourai"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "redis.*", "qdrant_client.*", "mcp.*", "jose", "jose.*", "fitz", "fitz.*", "docx", "docx.*", "tiktoken", "tiktoken.*", "voyageai", "voyageai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yourai.api.sse.auth", "yourai.core.auth"]
disallow_untyped_calls = false
